Comentar código + mejorar menu para que admita iconos (flecha, settings...)

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -1,7 +1,6 @@
-<ion-header [innerHTML]="AppInit.header" class='bgHeader'>
-
+<ion-header class='bgHeader'>
+        <img src="{{AppInit.headerimg}}">
 </ion-header>
-
 <ion-content padding class='bgContent'>
 
 </ion-content>
