--- a/src/pages/uni/uni.html
+++ b/src/pages/uni/uni.html
@@ -1,5 +1,5 @@
-<ion-header [innerHTML]="AppInit.header" class='bgHeader'>
-
+<ion-header class='bgHeader'>
+        <img src="{{AppInit.headerimg}}">
 </ion-header>
 
 <ion-content padding class='bgContent'>
