Actualizada página de contacto

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs  color='primary'>
+<ion-tabs  color='primary' class="hide-on-keyboard-open">
   <ion-tab [root]="news" tabTitle="Noticias" tabIcon="ios-paper-outline"></ion-tab>
   <ion-tab [root]="ceupna" tabTitle="CEUPNA" tabIcon="ios-people-outline"></ion-tab>
   <ion-tab [root]="uni" tabTitle="Universidad" tabIcon="ios-school-outline"></ion-tab>
