--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,9 @@
   <meta name="theme-color" content="#4e8ef7">
 
   <!-- cordova.js required for cordova apps -->
-  <script src="cordova.js"></script>
+    <script src="http://maps.google.com/maps/api/js?key=AIzaSyDAMJxV6TBf2HFR2GzMsAKifxXsNCYn1T0"></script>
+    <script src="cordova.js"></script>
+
 
   <!-- un-comment this code to enable service worker
   <script>
