--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -4,6 +4,19 @@
 
 
 <ion-content padding class='bgContent'>
+   <div #map id="map" style="height: 50%;width:100%"></div>
+  <ion-card>
+    <ion-card-header>
+      {{ "LOCALIZACION" | translate}}
+    </ion-card-header>
+    <ion-card-content>
+  <p>{{ "NOS ENCONTRAMOS EN EL AULA 07" | translate}}</p>
+<p><ion-icon style="font-size:30px" name="logo-call"></ion-icon>&nbsp;&nbsp;948 16 62 54</p>
+<p><ion-icon style="font-size:30px" name="logo-mail"></ion-icon>&nbsp;&nbsp;consejo.estudiantes@unavarra.es</p>
+<p><ion-icon style="font-size:30px" name="logo-globe"></ion-icon>&nbsp;&nbsp;www.ceupna.es</p>
+
+    </ion-card-content>
+  </ion-card>
   <ion-card>
     <ion-card-header>
       {{ "OUR SOCIAL NETWORKS" | translate}}
