--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -10,10 +10,10 @@
       {{ "LOCALIZACION" | translate}}
     </ion-card-header>
     <ion-card-content>
-  <p>{{ "NOS ENCONTRAMOS EN EL AULA 07" | translate}}</p>
-<p><a href="tel:948166254"><ion-icon style="font-size:30px" name="logo-call"></ion-icon>&nbsp;&nbsp;948 16 62 54</a></p>
-<p><a href="mailto:consejo.estudiantes@unavarra.es"><ion-icon style="font-size:30px" name="logo-mail"></ion-icon>&nbsp;&nbsp;consejo.estudiantes@unavarra.es</a></p>
-<p><a href="http://www.ceupna.es"><ion-icon style="font-size:30px" name="logo-globe"></ion-icon>&nbsp;&nbsp;www.ceupna.es</a></p>
+  <p>{{ "DESC_LOCALIZACION" | translate}}</p>
+<p class="contact-paragraph"><a href="tel:948166254"><ion-icon name="call"></ion-icon>&nbsp;&nbsp;948 16 62 54</a></p>
+<p class="contact-paragraph"><a href="mailto:consejo.estudiantes@unavarra.es"><ion-icon name="mail"></ion-icon>&nbsp;&nbsp;consejo.estudiantes@unavarra.es</a></p>
+<p class="contact-paragraph"><a href="http://www.ceupna.es"><ion-icon name="globe"></ion-icon>&nbsp;&nbsp;www.ceupna.es</a></p>
 
     </ion-card-content>
   </ion-card>
