--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -4,7 +4,7 @@
 
 
 <ion-content padding class='bgContent'>
-   <div #map id="map" style="height: 50%;width:100%"></div>
+ <div #map id="map" style="height: 50%;width: calc(100% - 20px);position: relative;overflow: hidden;margin: 0 auto;"></div>
   <ion-card>
     <ion-card-header>
       {{ "LOCALIZACION" | translate}}
