--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-tabs  color='primary' class="hide-on-keyboard-open">
-  <ion-tab [root]="news" tabTitle="Noticias" tabIcon="ios-paper-outline"></ion-tab>
+  <ion-tab [root]="news" [tabTitle]="('NOTICIAS' | translate) || '&nbsp;'" tabIcon="ios-paper-outline"></ion-tab>
   <ion-tab [root]="ceupna" tabTitle="CEUPNA" tabIcon="ios-people-outline"></ion-tab>
-  <ion-tab [root]="uni" tabTitle="Universidad" tabIcon="ios-school-outline"></ion-tab>
-  <ion-tab [root]="alerts" tabTitle="Alertas" tabIcon="ios-notifications-outline"></ion-tab>
+  <ion-tab [root]="uni" [tabTitle]="('UNIVERSIDAD' | translate) || '&nbsp;'" tabIcon="ios-school-outline"></ion-tab>
+  <ion-tab [root]="alerts" [tabTitle]="('ALERTAS' | translate) || '&nbsp;'" tabIcon="ios-notifications-outline"></ion-tab>
 </ion-tabs>
