Añadidas las flechas de página anterior en todas las páginas necesarias

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,5 +1,6 @@
 <ion-header class='bgHeader'>
-        <img src="{{AppInit.headerimg}}">
+  <ion-icon (click)="OpenCeupna()" style="float:left;font-size: 35px;color:white;padding: 10px;"name="arrow-back"></ion-icon>
+  <img src="{{AppInit.headerimg}}">
 </ion-header>
 
 
