--- a/src/pages/complaints/complaints.html
+++ b/src/pages/complaints/complaints.html
@@ -1,4 +1,5 @@
 <ion-header class='bgHeader'>
+        <ion-icon (click)="OpenCeupna()" style="float:left;font-size: 35px;color:white;padding: 10px;"name="arrow-back"></ion-icon>
         <img src="{{AppInit.headerimg}}">
 </ion-header>
 
