--- a/src/pages/uni/uni.html
+++ b/src/pages/uni/uni.html
@@ -5,7 +5,7 @@
 <ion-content padding class='bgContent'>
   <ion-card (click)="OpenMentoring()">
     <ion-card-header>
-     Tutorías
+     {{ "MENTORING" | translate}}
     </ion-card-header>
     <ion-card-content>
       <!-- Add card content here! -->
@@ -13,7 +13,7 @@
   </ion-card>
   <ion-card (click)="OpenTic()">
     <ion-card-header>
-    Información TIC
+      {{ "TIC" | translate}}
     </ion-card-header>
     <ion-card-content>
       <!-- Add card content here! -->
@@ -21,7 +21,7 @@
   </ion-card>
   <ion-card (click)="OpenSchedule()">
     <ion-card-header>
-      Agenda
+      {{ "SCHEDULE" | translate}}
     </ion-card-header>
     <ion-card-content>
       <!-- Add card content here! -->
