--- a/src/pages/notes/notes.html
+++ b/src/pages/notes/notes.html
@@ -5,5 +5,9 @@
 
 
 <ion-content padding class='bgContent'>
-
+  <ion-card>
+    <ion-card-content>
+      {{ "NOTES DESC" | translate}}
+    </ion-card-content>
+  </ion-card>
 </ion-content>
