--- a/src/pages/uni/uni.html
+++ b/src/pages/uni/uni.html
@@ -27,4 +27,12 @@
       <!-- Add card content here! -->
     </ion-card-content>
   </ion-card>
+  <ion-card (click)="OpenTransport()">
+    <ion-card-header>
+      {{ "TRANSPORT" | translate}}
+    </ion-card-header>
+    <ion-card-content>
+      <!-- Add card content here! -->
+    </ion-card-content>
+  </ion-card>
 </ion-content>
