--- a/src/pages/tic/tic.html
+++ b/src/pages/tic/tic.html
@@ -5,11 +5,10 @@
 
 
 <ion-content padding class='bgContent'>
-  <ion-card *ngFor="let recurso of recursos" (click)="OpenSingleTic(recurso.id)">
-
-    <ion-card-content>
-      <p style="max-width: 60%;float: right;">{{recurso.name}}</p>
-      <img style="max-width: 15%;float: left;padding-bottom:15px;" src="{{recurso.icon}}">
-      </ion-card-content>
-    </ion-card>
+  <ion-row wrap>
+    <ion-col width-50 *ngFor="let recurso of recursos" (click)="OpenSingleTic(recurso.id)">
+      <img style="max-width: 85%;padding-bottom:15px;" src="{{recurso.icon}}">
+      <p style="text-align:center">{{recurso.name}}</p>
+    </ion-col>
+  </ion-row>
 </ion-content>
