--- a/src/pages/alerts/alerts.html
+++ b/src/pages/alerts/alerts.html
@@ -7,26 +7,18 @@
 <ion-content padding class='bgContent'>
   <ion-card>
     <ion-card-header>
-      ALERTA
+      Convocatoria becas MECD
     </ion-card-header>
     <ion-card-content>
-      Este es el texto de la alerta.
+      El plazo está abierto hasta el día 18 y se debe presentar toda la información.
     </ion-card-content>
   </ion-card>
   <ion-card>
     <ion-card-header>
-      ALERTA
+      Elecciones a claustro
     </ion-card-header>
     <ion-card-content>
-      Este es el texto de la alerta.
-    </ion-card-content>
-  </ion-card>
-  <ion-card>
-    <ion-card-header>
-      ALERTA
-    </ion-card-header>
-    <ion-card-content>
-      Este es el texto de la alerta.
+      Las elecciones se celebrarán el 28, accede a la web para ver más información.
     </ion-card-content>
   </ion-card>
 </ion-content>
